# eth_payment_tutorial

./: .eslintrc  .gitignore  Cargo.toml  README.md  dfx.json  next.config.js  package-lock.json  package.json
backend/hello/: Cargo.toml  hello.did
backend/hello/src/: lib.rs  receipt.rs
backend/payment/: Cargo.toml  payment.did
backend/payment/src/: lib.rs  receipt.rs
src/components/: Confirmation.tsx  Deposit.tsx  Item.tsx  Shop.tsx  VerifyTransaction.tsx  Wallet.tsx
src/declarations/evm_rpc/: evm_rpc.did.d.ts  evm_rpc.did.js  index.d.ts  index.js
src/declarations/hello/: hello.did  hello.did.d.ts  hello.did.js  index.js
src/declarations/payment/: index.d.ts  index.js  payment.did  payment.did.d.ts  payment.did.js
src/pages/: _app.tsx  history.tsx  index.tsx
src/service/: abi.json  config.ts  hello.ts  payment.ts
src/styles/: History.module.css  Home.module.css  Item.module.css  Shop.module.css  global.css
