[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
b3_utils = { version = "0.8.0", features = ["ledger", "stable_memory"] }
