[package]
name = "payment"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
b3_utils = { version = "0.9", features = ["ledger", "stable_memory"] }
