[package]
name = "payment"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
b3_utils = { version = "0.11.0", features = ["ledger", "stable_memory"] }
evm-rpc-canister-types = "1.0.0"
